# pyTransC

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  pyproject.toml  readme.md
dev/: parallel.md
examples/AirborneEM/: TransC-AEM_example.ipynb
examples/AirborneEM/AEM_data/lyr01/: chain.out
examples/AirborneEM/AEM_data/lyr02/: chain.out
examples/AirborneEM/AEM_data/lyr03/: chain.out
examples/AirborneEM/AEM_data/lyr04/: chain.out
examples/AirborneEM/AEM_data/lyr05/: chain.out
examples/AirborneEM/AEM_data/lyr06/: chain.out
examples/AirborneEM/AEM_data/lyr07/: chain.out
examples/AirborneEM/AEM_data/lyr08/: chain.out
examples/AirborneEM/utils/: AEM_IO_utils.py  AEM_plot_utils.py
examples/Gaussians/: TransC_Gaussians_product-space.ipynb  TransC_Gaussians_pseudo-prior.ipynb  TransC_Gaussians_state-jump.ipynb
examples/Gravity/: faults.ipynb
examples/Regression/: TransC_Regression_parallel.ipynb  TransC_Regression_parallel_forward.ipynb  TransC_Regression_product.ipynb  TransC_Regression_resampler.ipynb  TransC_Regression_resampler_parallel.ipynb  TransC_Regression_resampler_pool_expose.ipynb  TransC_Regression_resampler_pool_exposed.ipynb  TransC_Regression_state-jump.ipynb  TransC_Regression_state-jump_parallel.ipynb
examples/Tomography/: FMM_TransC_borehole_parallel.ipynb  FMM_TransC_borehole_parallel_mpi.py  mpi_test.py
src/pyTransC/: __init__.py  exceptions.py  libTransC.py
src/pyTransC/analysis/: __init__.py  integration.py  laplace.py  samples.py  visits.py
src/pyTransC/samplers/: __init__.py  _emcee.py  _utils.py  ensemble_resampler.py  per_state.py  product_space.py  state_jump.py
src/pyTransC/utils/: __init__.py  auto_pseudo.py  autocorr.py  mixture.py  types.py
src/pytransc/analysis/: visits.py
src/pytransc/samplers/: _emcee.py  ensemble_resampler.py  per_state.py  product_space.py  state_jump.py
src/pytransc/utils/: auto_pseudo.py  exceptions.py  forward_context.py
tests/test_pytransc/test_analysis/: test_visits.py
tests/test_pytransc/test_samplers/: test__utils.py  test_ensemble_resampler.py  test_per_state.py  test_product_space.py  test_state_jump.py
tests/test_pytransc/test_utils/: __init__.py  test_auto_pseudo.py
